# ZODOM

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  pom.xml
.github/workflows/: release.yml
src/: auth.rs  db.rs  error.rs  main.rs  music_manager.rs  songs.rs
src/main/kotlin/com/zeus/zodom/: ZodomApplication.kt
src/main/resources/: application.properties
src/test/kotlin/com/zeus/zodom/: ZodomApplicationTests.kt
static/: reload_on_songchange.js
static/stylesheets/: buttons.css  buttons2.css  desktop.css  mobile.css
templates/: desktop.askama  desktop.html  hello.html  login.html  vote_page.askama
