[package]
name = "zodom"
version = "0.1.0"
edition = "2024"

[dependencies]
askama = "0.14.0"
tokio = { version = "1.47.1", features = ["rt", "rt-multi-thread", "macros"] }
axum = "0.8.4"
tower-http = { version = "0.6.2", features = ["fs"] }
tower-sessions = { version = "0.14.0", features = [] }
tower-sessions-file-store = "0.2.0"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
rand = "0.9.2"
serde = { version = "1.0.219", features = ["derive"] }
reqwest = { version = "0.12.23", features = ["json"] }
